[gd_scene load_steps=4 format=2]

[ext_resource path="res://code/hostile/BaseHostile.gd" type="Script" id=1]
[ext_resource path="res://code/hostile/MutationProcesser.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]
height = 0.985921
radius = 0.468105

[node name="Hostile" type="KinematicBody" groups=["Active", "Hostile"]]
collision_layer = 196
collision_mask = 196
script = ExtResource( 1 )
BodyType = 1
LegType = 1
FeetType = -1
LegCount = 6
LegSpacing = Vector3( 0.5, 0, 0.2 )
Global_scale = 1.033

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.490529, 0 )
shape = SubResource( 1 )

[node name="BodyCont" type="Spatial" parent="."]

[node name="GroundRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -0.868, 0 )
collision_mask = 16
debug_shape_custom_color = Color( 0.792157, 0.0431373, 1, 1 )
debug_shape_thickness = 5

[node name="GroundRay2" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -1.011, 0 )
collision_mask = 16
debug_shape_custom_color = Color( 0, 0.439216, 1, 1 )
debug_shape_thickness = 5

[node name="Detection" type="RayCast" parent="."]
enabled = true
collision_mask = 68

[node name="MutationProcesser" type="Spatial" parent="."]
script = ExtResource( 2 )
